# pymdp

./: .gitignore  AGENTS.md  README.md  To-Do.md  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  run_all_example_tests.py  setup.cfg  setup.py
docxology/: AGENTS.md  README.md  pyproject.toml  run_all.py
docxology/config/: AGENTS.md  README.md  orchestration.yaml
docxology/docs/: AGENTS.md  README.md  docxology_pymdp_overview.md  examples_catalog.md  orchestrator_internals.md  thermodynamics_reference.md  validation_matrix.md  visualization_reference.md
docxology/examples/: AGENTS.md  README.md
docxology/manifests/: AGENTS.md  README.md  legacy_notebooks.txt  notebooks_ci.txt  notebooks_nightly.txt  orchestrations.txt  python_scripts.txt
docxology/output/: AGENTS.md  README.md  run_summary.json
docxology/pkg/: AGENTS.md  README.md  __init__.py
docxology/pymdp_docxology.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docxology/scripts/: AGENTS.md  README.md  run_docxology_notebooks.py  run_docxology_orchestrations.py  run_upstream_test_suite.sh
docxology/tests/: AGENTS.md  README.md  conftest.py  test_analysis.py  test_manifests.py  test_notebook_runner_smoke.py  test_orchestrations.py  test_viz.py
pymdp/: CONTRIBUTING.md  README.md  __init__.py  check_install.py  install_dev.py  requirements.txt  run_rgm.py  setup.cfg  setup.py  utils.py
pymdp/agentmaker/: Active_Inference_GNN.py  Biofirm_Execute_GNN.py  Biofirm_Render_GNN.py  Biofirm_Shapley.py  Biofirm_Visualize.py  Concept_Biofirm_GNN.md  PyMDP_Startup.py  README_Biofirm_GNN.md  README_Biofirm_Shapley.md  Run_Biofirm.py  __init__.py  biofirm_execution_utils.py  config.py  run_experiment.py
pymdp/configs/: default_mnist_config.json  mnist_config.json  mnist_config.json.default  my_config.json
pymdp/docs/: RGM_GNN_Tech_Spec.md  RGM_MNIST.md  active_inference.md  data_preparation.md  free_energy.md  gnn_specifications.md  hierarchy.md  hierarchy_spec.md  matrix_generation.md  matrix_initialization.md  matrix_naming.md  message_passing.md  migration.md  model_initialization.md  model_state.md  rgm_mnist.md  theory.md  training.md
pymdp/gnn/: README_GNN.md  __init__.py  biofirm_utils.py  gnn_logging.py  gnn_matrix_factory.py  gnn_runner.py  gnn_schema.json  gnn_utils.py
pymdp/maths/: __init__.py  maths.py
pymdp/metapymdp/: MetaPyMDP_folder_structure.py  pymdp_methods.txt  pymdp_structure.json  pymdp_structure.txt
pymdp/multiagent/: LL-GM_Admin.py  LL-GM_Website.py  LL_AWC_Blog_Part1.md  LL_AWC_Run.py  LL_AWC_Visualization.py  LL_GM_Admin.py  LL_GM_Website.py  LL_Methods.py  README.md  __init__.py
pymdp/rgm/: README.md  RGM_GNN_Tech_Spec.md  RGM_MNIST.md  Run_RGM.py  __init__.py  config.json  local_imports.py  mnist_download.py  pipeline.py  rgm_execute.py  rgm_render.py  (+2 more)
pymdp/rgm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1308 files in other folders)
