[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymdp"
version = "0.1.0"
authors = [
  { name="PyMDP Contributors" },
]
description = "Python implementation of Active Inference and Message Passing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19.0",
    "torch>=1.7.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pandas>=1.1.0",
    "tqdm>=4.50.0",
    "jsonschema>=3.2.0",
    "pyyaml>=5.3.0",
    "psutil>=5.7.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pymdp"
"Bug Tracker" = "https://github.com/yourusername/pymdp/issues"

[tool.setuptools]
packages = ["pymdp"] 