[metadata]
name = pymdp
version = 1.0.0
description = Active Inference Framework with RGM Implementation
author = VERSES Research Lab
author_email = research@verses.ai
url = https://github.com/versesresearch/pymdp

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch>=1.8.0
    torchvision>=0.9.0
    numpy>=1.19.0
    matplotlib>=3.3.0
    seaborn>=0.11.0
    psutil>=5.8.0
    pyyaml>=5.4.0

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    mypy>=0.900 